# nba-home-win-probability-model

./: .gitignore  LICENSE  Makefile  NBA_Model_Fully_Formulated.xlsx  README.md  START_HERE.md  SUMMARY.md  open_interview.sh  open_the_presentation.sh  present.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_submission.py  validate_submission.py
artifacts/: README.md  april_calibration_bins.csv  benchmark_comparison.csv  calibration_challenger_daily_predictions.csv  calibration_challenger_decision.json  calibration_challenger_frozen_predictions.csv  coefficient_table.csv  data_audit.json  date_split_summary.csv  extreme_probability_audit.csv  feature_correlations.csv  feature_examples.csv  feature_governance.csv  feature_group_ablation.csv  final_metrics.json  manifest.sha256  march_architecture_results.csv  march_calibration_bins.csv  march_tuning_top_candidates.csv  model_metadata.json  model_schema.json  nested_backtest_folds.csv  nested_backtest_predictions.csv  nested_backtest_summary.json  nested_daily_sequential_folds.csv  nested_daily_sequential_predictions.csv  nested_daily_sequential_summary.json  nested_frozen_block_folds.csv  nested_frozen_block_predictions.csv  nested_frozen_block_summary.json  paired_bootstrap_champion_vs_blend.json  paired_bootstrap_vs_constant.json  paired_bootstrap_vs_elo.json  paired_bootstrap_vs_rank.json  permutation_importance.csv  pre_march_fold_results.csv  pre_march_selection_proof.json  pytest_report.txt  rolling_oof_calibration.csv  rolling_oof_metrics.json  (+9 more)
configs/: architecture_candidates.json  benchmarks.json  (+2 more)
(+140 files in other folders)
