[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-home-win-probability-model"
version = "2.0.0"
description = "Leakage-audited NBA home-win probabilities using Elo and Bradley-Terry/trend blending."
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy==2.3.5",
  "pandas==2.2.3",
  "scikit-learn==1.8.0",
  "matplotlib==3.10.8",
  "joblib==1.5.3",
]

[tool.setuptools]
packages = ["nba_wp"]
