[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-home-win-probability"
version = "2.1.0"
description = "NBA home-win probabilities: pre-March selected direct logistic on Elo, Bradley-Terry, and trend features."
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy==2.3.5",
  "pandas==2.2.3",
  "scikit-learn==1.8.0",
  "matplotlib==3.10.8",
  "joblib==1.5.3",
  "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-cov==6.0.0",
  "ruff==0.11.2",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["nba_wp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
